syntax = "proto3";
package paralus.dev.types.sentry;

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";

message KubeconfigRevocation {
	string id = 1;
	string organizationID = 2;
	string partnerID = 3;
	string accountID = 4;
	bool isSSOUser = 5;
	google.protobuf.Timestamp revokedAt = 6;
	google.protobuf.Timestamp createdAt = 7 [
		(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		  read_only : true
		}
	];
}

message KubeconfigSetting {
	string id = 1;
	string organizationID = 2;
	string partnerID = 3;
	string accountID = 4;
	string scope = 5;
	sint64 validitySeconds = 6;
	sint64 saValiditySeconds = 7;
	google.protobuf.Timestamp createdAt = 8 [
		(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		  read_only : true
		}
	];
	google.protobuf.Timestamp modifiedAt = 9 [
		(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		  read_only : true
		}
	];
	google.protobuf.Timestamp deletedAt = 10 [
		(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		  read_only : true
		}
	];
	bool enableSessionCheck = 11;
	bool isSSOUser = 12;
	bool enablePrivateRelay = 13;
    bool enforceOrgAdminSecretAccess = 14;
	bool disableWebKubectl = 15;
    bool disableCLIKubectl = 16;
}